--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,5 @@ gfpgan/weights/*
 outputs/*
 pretrained_models/*
 models/*
-<<<<<<< HEAD
 env/*
-=======
-env
->>>>>>> 29f4956de4b0bfc1afb896b5b0740c099be08a12
+venv
